# libquack

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: linux.yml  windows.yml
cmake/: libquack-config.cmake.in  libquack.pc.in  x86_64-w64-mingw32.cmake
docs/: README.md  base.md
docs/core/: README.md
examples/: CMakeLists.txt
examples/hello/: CMakeLists.txt  hello.c
examples/keyboard/: CMakeLists.txt  keyboard.c
examples/primitives/: CMakeLists.txt  primitives.c
examples/sounds/: CMakeLists.txt  sounds.c
examples/textures/: CMakeLists.txt  textures.c
include/libqu/: libqu.h
include/libquack/: libquack-version.h.in  libquack.h
src/: algebra.c  algebra.h  audio.c  audio.h  audio_null.c  audio_openal.c  audio_openal.h  base.c  core.c  core.h  core_null.c  core_win32.c  core_x11.c  core_x11.h  dyn_gl3.h  dyn_openal.h  dyn_wgl.h  fs.c  fs.h  graphics.c  graphics.h  graphics_gl3.c  graphics_gl3.h  graphics_null.c  handle.c  handle.h  log.c  log.h  platform.h  platform_posix.c  platform_win32.c  util.c  wave.c  wave.h
tests/: CMakeLists.txt  blend-modes.c  hello.c  keyboard.c  music.c  primitives.c  sounds.c  textures.c  utf8-title.c
